# easy_sermon

./: .gitignore  Cargo.toml  README.MD  README.md  build.rs  get-certificates.sh
.github/: CODEOWNERS
.github/workflows/: build.yml  easy_sermon.yml
api/: .gitignore  audio.py  broadcast.py  capture.py  chunk.py  detect.py  devices.py  display.py  download.py  download_vosk.py  download_whisper.py  extract.py  main.py  propresent.py  propresenter.py  reference.py  requirements.txt  scriptures.py  stream.py
src/: audio.rs  capture.rs  detect.rs  devices.rs  download_vosk.rs  main.rs  propresenter.rs  reference.rs  scriptures.rs  stream.rs
templates/: index.html
translations/: test_bible.json
