[package]
name = "easy_sermon"
version = "1.2.11"
edition = "2021"
authors = [
    "Christian Mbaba <mxlightningx@gmail.com>",
    "Dominion Chapel Houston <media@dominionchapel.org>",
    "Blessing Ajughu <bajughu@gmail.com>",
]

[dependencies]
cpal = "0.16.0"
hashbrown = "0.15.4"
idna = "1.0.3"
openssl = "0.10.73"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio = "1.47.0"
url = "2.5.4"

[build-dependencies]
futures-util = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["stream", "rustls-tls"] }
tokio = { version = "1.47.0", features = ["full"] }
zip = "4.3.0"
