[package]
name = "easy_sermon"
version = "2.3.6"
edition = "2024"
authors = [
    "Christian Mbaba <mxlightningx@gmail.com>",
    "Dominion Chapel Houston <media@dominionchapel.org>",
    "Blessing Ajughu <bajughu@gmail.com>",
]
license = "Apache-2.0"
description = "Recognize spoken Bible verses in any audio stream"

[dependencies]
anyhow = "1.0.98"
cpal = "0.16.0"
crossbeam-channel = "0.5"
dotenv = "0.15.0"
fuzzy-matcher = "0.3.7"
hashbrown = "0.15.4"
idna = "1.0.3"
once_cell = "1.21.3"
openssl = "0.10.73"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
url = "2.5.4"
vosk = "0.3"

[build-dependencies]
futures-util = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["stream", "rustls-tls"] }
tokio = { version = "1.47", features = ["full"] }
zip = "4.3.0"
